--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Jan 17 17:02:11 GST 2024
-sdk.dir=/Users/kofisefah/Library/Android/sdk
+#Fri Jan 19 19:36:12 PST 2024
+sdk.dir=C\:\\Users\\maxwe\\AppData\\Local\\Android\\Sdk
